# ruburu

./: .gitignore  Cargo.toml  init.sql
migrations/: 20220514224221_init.sql  20220605062720_add_replies.sql  20220605144229_add_bans.sql  20220605183744_add_images.sql  20220606094432_add_captcha.sql  20220606134835_add_sessions.sql
src/: errors.rs  fairings.rs  main.rs  models.rs
src/routes/: admin.rs  public.rs
static/: script.js  style.css  style.scss
