[package]
name = "ruburu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
sqlx = { version = "0.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "ipnetwork",
    "uuid",
] }
maud = { path = "maud/maud", features = ["rocket"] }
thiserror = "1.0.31"
dotenv = "0.15.0"
regex = "1.5.6"
once_cell = "1.12.0"
ammonia = "3.2.0"
md5 = "0.7.0"
tokio = "1.19.1"
image = "0.24.2"
captcha = { version = "0.0.9", default-features = false }
uuid = { version = "1.1.1", features = ["v4"] }
rand = "0.8.5"
